# Head-First-C-Codes

./: .gitignore  CMakeLists.txt  README.md
Advanced_function/: Variadic_function.c  auto_generator.c  find_lovers.c  qsort_use.c
DataStruct_DynamicMemory/: tour.c
DataStruct_DynamicMemory/case_sovle/: case_solve.c
DataStruct_DynamicMemory/tour/: tour.c  trip1.txt
Process_and_Sytemcall/: guard_log.c  notice.md
Process_and_Sytemcall/exec/: dinner_info.c  my_exec_program.c  show_ip.c
Process_and_Sytemcall/exec+fork/: newshound.c
String_/: fill_chars.c  find_tracks.c  reverse_strings.c
create_tools/GPS/: geo2json.c  gpsdata.csv  output.json
create_tools/secret_message_/: secret_message.c
create_tools/use_library_/: use_library.c
divide_and_rule/: encrypt.c  encrypt.h  file.txt  file_header.c
divide_and_rule/use Make/: launch.c  make.md  makefile  truster.c  truster.h
lib_and_dll/: checksum.c  encrypt.c  test_code.c
struct_union_bitchar/: struct_union_enumerate.c
struct_union_bitchar/bitchar_/: bitchar.c
struct_union_bitchar/struct_/: fish.c  safe_box.c  turtle.c  typedef_.c
struct_union_bitchar/union_/: bartender.c  fruit.c
testcodes/: test.c
